--- a/index.html
+++ b/index.html
@@ -8,5 +8,82 @@
 </head>
 <body>
     <h2>Vercel - deployment</h2>
+
+    <nav>
+        <ul>
+            <li><a href="#" class="link">CSS</a></li>
+            <li><a href="#" class="link">React.js</a></li>
+            <li><a href="#" class="link">HTML</a></li>
+            <li><a href="#" class="link">Windovus</a></li>
+        </ul>
+
+
+    <div id="bars">
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+        <div class="bor"></div>
+    </div>
+
+    <div class="ol">
+
+        <div class="kantenr">
+            <div class="kuvadirad1"></div>
+            <div class="kuvadirad2"></div>
+            <div class="box">
+                <h2>LORIN</h2>
+                <input type="text" placeholder="Your name">
+                <br>
+                <input type="password" placeholder="Your password">
+                <br>
+                <button>SIGN IN</button>
+            </div>
+            <div class="wrapper">
+                <div class="reg1"></div>
+                <div class="reg2"></div>
+                <div class="reg3"></div>
+            </div>
+        </div>
+    </div>
+    <div class="main">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="battery-top"></div>
+        <div class="battery-content">
+            <div class="charge"></div>
+        </div>
+    </div>
+
 </body>
 </html>
